# wasmedge-yolo-rs-video-processing-plugin

./: Cargo.toml  README.md
demo_video/: runme.sh
host_library/: Cargo.toml
host_library/src/: decode_video.rs  dump_frames.rs  encode_video.rs  lib.rs  time.rs
src/: lib.rs
wasm_app/: Cargo.toml
wasm_app/src/: main.rs
