[package]
edition = "2021"
name = "wasm_app"
version = "0.4.0"

[dependencies]
image = { version = "0.24.7", default-features = false, features = [
    "gif",
    "jpeg",
    "ico",
    "png",
    "pnm",
    "tga",
    "tiff",
    "webp",
    "bmp",
    "hdr",
    "dxt",
    "dds",
    "farbfeld",
]}