[package]
edition = "2021"
name = "wasm_app"
version = "0.4.0"
# forced-target = "wasm32-unknown-unknown"

[dependencies]
log = "0.4.20"
image = { version = "0.24.7", default-features = false, features = [
    "gif",
    "jpeg",
    "ico",
    "png",
    "pnm",
    "tga",
    "tiff",
    "webp",
    "bmp",
    "hdr",
    "dxt",
    "dds",
    "farbfeld",
]}
prgrs = "0.6.4"
simplelog = "0.12.1"